...
            <objects>
                <windowController storyboardIdentifier="AboutWCId" id="fJX-wy-6F5" sceneMemberID="viewController">
                    <window key="window" identifier="AboutWindowId" title="About BitURL" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="dni-c0-ULY" customClass="NSPanel">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
...
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <imageView identifier="AboutIconId" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zmb-oO-vGo">
                                <rect key="frame" x="20" y="20" width="128" height="128"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="BitURLIcon" id="DoE-KQ-4j8"/>
                            </imageView>
                            <textField identifier="AboutAppNameLabelId" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Sy-zl-geq">
                                <rect key="frame" x="154" y="98" width="178" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                </textFieldCell>
                            </textField>
                            <textField identifier="AboutVersionLabelId" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="48Q-TP-cZT">
                                <rect key="frame" x="154" y="74" width="220" height="16"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
...
                                </textFieldCell>
                            </textField>
                            <textField identifier="AboutCopyrightLabelId" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zXf-T9-RB6">
                                <rect key="frame" x="154" y="20" width="187" height="46"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
...
            <objects>
                <windowController storyboardIdentifier="MainWCId" id="B8D-0N-5wS" customClass="MainWindowController" customModule="BitURL" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" identifier="MainWindowId" title="BitURL – URL Shortner" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA" userLabel="BitURL – URL Shortner">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
                        <rect key="contentRect" x="196" y="240" width="768" height="512"/>
...
                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="BitURLIcon" id="EHD-vB-RD3"/>
                            </imageView>
                            <button identifier="MainConfigureButtonId" verticalHuggingPriority="750" id="vqj-FW-d2y">
                                <rect key="frame" x="334" y="13" width="100" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
                                </connections>
                            </button>
                            <textField identifier="MainApiTokenFieldId" verticalHuggingPriority="750" id="aRT-by-FW7">
                                <rect key="frame" x="203" y="118" width="361" height="21"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                            </progressIndicator>
                            <imageView identifier="MainStatusIconId" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jNj-1u-LHy" userLabel="Status Icon">
                                <rect key="frame" x="375" y="62" width="18" height="18"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="SuccessIcon" id="Cgq-Wc-TgH"/>
                            </imageView>
                            <button identifier="MainHideIconCheckboxId" verticalHuggingPriority="750" id="aSB-2S-33D">
                                <rect key="frame" x="317" y="94" width="145" height="18"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
...
