...
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="jtT-ld-XAZ">
            <objects>
                <windowController storyboardIdentifier="PreferencesWCId" id="iqz-Su-lBV" customClass="PreferencesWindowController" customModule="BitURL" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" identifier="PreferencesWindowId" title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="kDm-kh-wsj">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
                        <rect key="contentRect" x="681" y="140" width="480" height="130"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
                        <toolbar key="toolbar" implicitIdentifier="58A3E59E-61D0-47C1-80CC-5B0C0D4F21F5" autosavesConfiguration="NO" allowsUserCustomization="NO" displayMode="iconAndLabel" sizeMode="regular" id="9xu-QE-jIQ">
                            <allowedToolbarItems>
                                <toolbarItem implicitItemIdentifier="6ACAFC45-1B10-4BC9-9FA7-8248CFA04FCB" explicitItemIdentifier="NSPreferencesGeneralItem" label="General" paletteLabel="General" tag="-1" image="NSPreferencesGeneral" selectable="YES" id="wDG-Q7-zWO">
...
            <objects>
                <viewController storyboardIdentifier="PreferencesVCId" id="S55-qv-hjX" customClass="PreferencesViewController" customModule="BitURL" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" id="Rh0-84-nXi">
                        <rect key="frame" x="0.0" y="0.0" width="480" height="110"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <textField identifier="ApiKeyTextFieldId" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QFZ-Fz-OL6">
                                <rect key="frame" x="105" y="69" width="331" height="21"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="7ce0ba488b0d6930ca7d0c4966d6344d75fa27fc" placeholderString="bitly oauth token" drawsBackground="YES" id="C3k-jj-UhT">
                                    <font key="font" usesAppearanceFont="YES"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                                <connections>
                                    <action selector="textDidChange:" target="S55-qv-hjX" id="x81-MH-CQy"/>
                                    <outlet property="delegate" destination="S55-qv-hjX" id="3KY-AD-rRQ"/>
                                </connections>
                            </textField>
                            <button identifier="PreferencesHideIconId" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9UQ-AY-dIa">
                                <rect key="frame" x="103" y="38" width="359" height="18"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="check" title="Hide dock icon" bezelStyle="regularSquare" imagePosition="left" inset="2" id="e7m-La-Ar8">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
...
                            </progressIndicator>
                            <imageView identifier="PreferencesStatusIconId" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Yx-DM-7Bu" userLabel="Status Icon">
                                <rect key="frame" x="442" y="70" width="18" height="18"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="SuccessIcon" id="wSu-B9-dRL"/>
                            </imageView>
                            <button identifier="PreferencesHideNotificationsId" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HY6-oy-sfc">
                                <rect key="frame" x="103" y="18" width="359" height="18"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="check" title="Hide Notifications" bezelStyle="regularSquare" imagePosition="left" inset="2" id="iOp-OR-Qmd">
                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
...
